# python-limacharlie

./: .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  MICROSOFT_OAUTH_SETUP.md  NEW_CLI.md  OAUTH_README.md  README.md  build_doc.sh  cloudbuild.yaml  cloudbuild_pr.yaml  conftest.py  lc-oauth.sh  pyproject.toml  requirements-tests.txt  requirements.txt  runtests.py  setup.py
.claude/docs/: sdk-docstring-conventions.md
.github/workflows/: ci.yml  publish-to-pypi.yml
doc/: README.md  authentication.md  getting-started.md
doc/cli/: README.md  cloud-security.md  data-query.md  detection-response.md  hive-data.md  infrastructure.md  other-commands.md  platform-admin.md  sensor-management.md
doc/sdk/: README.md  configs.md  detection-rules.md  hive.md  organization.md  other-classes.md  search-insight.md  sensors.md  streaming.md
docs/: Makefile  conf.py  index.rst  limacharlie.rst  modules.rst
examples/: README.md  demo_search_api.py  hive_validation_example.py  search_with_pagination_persistence.py
limacharlie/: AIChat.py  ARL.py  BatchDR.py  Billing.py  Comms.py  Configs.py  DRCli.py  Extensions.py  Firehose.py  Hive.py  Hunter.py  Jobs.py  Logs.py  Manager.py  Model.py  Net.py  Payloads.py  Query.py  Replay.py  Replicants.py  Search.py  SearchAPI.py  SearchDownload.py  Sensor.py  Shell.py  SpotCheck.py  Spout.py  Sync.py  USP.py  User.py  UserPreferences.py  Webhook.py  WebhookSender.py  __init__.py  __main__.py  ai_help.py  cli.py  client.py  config.py  constants.py  (+32 more)
limacharlie/commands/: __init__.py  _adapter_types.py  _ai_attach.py  _dr_convert.py  _hive_shortcut.py  _input_helpers.py  _output_helpers.py  _time_validation.py  adapter.py  ai.py  ai_cost_model.py  ai_memory.py  ai_skill.py  api_cmd.py  api_key.py  app.py  arl.py  artifact.py  audit.py  auth.py  billing.py  case_cmd.py  cloud_sensor.py  cloudsec.py  completion.py  config_cmd.py  detection.py  download.py  dr.py  endpoint_policy.py  event.py  exfil.py  extension.py  feedback.py  fp.py  group.py  help_cmd.py  hive.py  ingestion_key.py  installation_key.py  (+29 more)
limacharlie/sample_configs/: LCConf  lc_conf.yaml
limacharlie/sample_configs/subsets/: secondary.yml
limacharlie/sdk/: __init__.py  ai.py  ai_memory.py  ai_session.py  api_keys.py  arl.py  artifacts.py  billing.py  cases.py  cloudsec.py  configs.py  downloads.py  dr_rules.py  exfil.py  extensions.py  feedback.py  firehose.py  fp_rules.py  groups.py  hive.py  ingestion_keys.py  insight.py  installation_keys.py  integrity.py  investigations.py  jobs.py  logging_rules.py  organization.py  outputs.py  payloads.py  replay.py  search.py  sensor.py  spout.py  ticketing.py  users.py  usp.py  vulnerability.py  yara.py
samples/: demo_connecting_LC_to_ChatGPT.py  demo_delete_duplicate_sensors.py  demo_firehose.py  demo_hive_batch.py  demo_manager.py  demo_spout.py  main.py
scripts/ci/: verify_fallback_encoding.py  verify_transport_compression.py  verify_zstd_decompression.py  verify_zstd_installed.py  verify_zstd_not_importable.py
tests/: test_artifacts.py  test_core.py  test_insight.py  test_replicants.py  test_spout.py  test_sync.py  test_user.py
tests/integration/: conftest.py  test_ai.py  test_auth.py  test_cli_comprehensive.py  test_config_directory.py  test_core.py  test_extensions.py  test_groups.py  test_hive.py  test_hive_validation.py  test_jobs.py  test_jwt_cache_end_to_end.py  test_jwt_cache_integration.py  test_keys.py  test_org_management.py  test_outputs.py  test_replay.py  test_replicants.py  test_rules.py  test_search.py  test_search_api_integration.py  test_sensors.py  test_spout.py  test_stream.py  test_sync.py  test_users.py  test_usp.py  test_v2_ai.py  test_v2_artifacts.py  test_v2_billing.py  test_v2_cli_comprehensive.py  test_v2_cli_e2e.py  test_v2_exfil.py  test_v2_groups.py  test_v2_hive.py  test_v2_integrity.py  test_v2_logging.py  test_v2_org.py  test_v2_org_management.py  test_v2_outputs.py  (+6 more)
tests/microbenchmarks/: conftest.py  test_cli_startup_microbenchmark.py  test_end_to_end_microbenchmark.py  test_jwt_cache_microbenchmark.py  test_paths_microbenchmark.py
tests/unit/: conftest.py  test_ai_help.py  test_ai_session_attach.py  test_api_cmd.py  test_cli_ai_skill_memory.py  test_cli_auth_login.py  test_cli_case.py  test_cli_cloudsec.py  test_cli_command_map_lint.py  test_cli_commands.py  test_cli_ergonomics.py  test_cli_lazy_loading_regression.py  test_cli_sanity.py  test_cli_sop.py  test_cli_ticket.py  test_cli_vulnerability.py  test_client.py  test_config.py  test_config_cmd.py  test_configs.py  test_dataclasses.py  test_debug_flag_integration.py  test_debug_logging.py  test_discovery.py  test_downloads.py  test_dr_convert.py  test_errors.py  test_file_utils.py  test_get_jwt.py  test_get_token.py  test_hive_batch.py  test_json_compat.py  test_json_utils.py  test_jwt_cache.py  test_login.py  test_oauth_mfa.py  test_output.py  test_packaging.py  test_paths.py  test_query.py  (+47 more)
