[build-system]
requires = ["setuptools>=75.8.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "limacharlie"
dynamic = ["version"]
description = "Python API for LimaCharlie.io"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "Maxime Lamothe-Brassard", email = "maxime@refractionpoint.com"}]
requires-python = ">=3.9"
dependencies = [
    "requests==2.32.3",
    "passlib==1.7.4",
    "pyyaml==6.0.2",
    "tabulate==0.9.0",
    "termcolor==2.5.0",
    "pygments==2.19.1",
    "rich==13.9.4",
    "cryptography==46.0.3",
    "click==8.1.8",
    "jmespath==1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-rerunfailures==15.0",
    "pytest-benchmark>=5.0.0",
    "tomli>=1.0; python_version < '3.11'",
]

[project.scripts]
limacharlie = "limacharlie.cli:main"

[project.urls]
Homepage = "https://limacharlie.io"

[tool.setuptools.packages.find]
include = ["limacharlie*"]

[tool.setuptools_scm]
version_file = "limacharlie/_version.py"
